# diy_airflow

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.cfg
examples/: example_pipeline.py  example_pipeline_2.py  test.py
pipelines/: example_pipeline.py  example_pipeline_2.py
src/diy_airflow/: data_model.py  filechecker.py  main.py  scheduler.py  state_saver.py  utils.py  worker.py
tests/: test_diy_airflow.py  test_utils.py
tests/test_pipelines/: good_pipeline.py
