[tool.poetry]
name = "diy-airflow"
version = "0.1.0"
description = ""
authors = ["Miguel Pereira Hernandez <mhernandez@xccelerated.io>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
watchdog = "^2.1.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
diy_airflow = "diy_airflow.main:main"
