[metadata]
name = diy-airflow
version = 0.1.0
description = Task orchestrator, like Airflow but home made
long_description = file: README.md

[options]
package_dir=
    =src
packages=find:
install_requires=
    click==8.1.3
    croniter==1.3.5
    wasabi==0.10.0
    networkx==2.8.5
    redis==4.3.4

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    diy_airflow=diy_airflow.main:main
